major refactoring plus release handling

--- a/rebar.config
+++ b/rebar.config
@@ -1,5 +1,8 @@
 {erl_opts, [debug_info]}.
 
+{sub_dirs, ["apps/ziryab", "rel"]}.
+
 {deps, [
-   {'repobj', "0.*", {git, "git://github.com/hussamal/repobj", {branch, "master"}}}
+   {'repobj', "0.*", {git, "git://github.com/hussamal/repobj", {branch, "master"}}},
+   {'bitcask', "1.5", {git, "git://github.com/basho/bitcask", {branch, "master"}}}
 ]}.
