Major refactoring to make it work with new libdist

--- a/rebar.config
+++ b/rebar.config
@@ -1,8 +1,6 @@
 {erl_opts, [debug_info]}.
 
-{sub_dirs, ["apps/ziryab", "rel"]}.
-
 {deps, [
-   {'repobj', "0.*", {git, "git://github.com/hussamal/repobj", {branch, "master"}}},
+   {'libdist', "0.*", {git, "git://github.com/hussamal/libdist", {branch, "master"}}},
    {'bitcask', "1.5", {git, "git://github.com/basho/bitcask", {branch, "master"}}}
 ]}.
